--- a/index.html
+++ b/index.html
@@ -9,8 +9,30 @@
   <body>
     <h1 class="inline-block bg-red-200 hover:bg-red-400 py-2 px-6 rounded-full shadow-md m-4">ボタン</h1>
     <p class="m-4 font-bold text-purple-800">はじめてのTailwind CSS</p>
-    <div class="container mx-auto px-8">
-      <h1 class="text-4xl font-bold text-center">container</h1>
+
+    
+    <div class="container max-w-2xl  px-8 py-4 mx-auto bg-white rounded-lg shadow-md dark:bg-gray-800 border">
+      <div class="flex items-center">
+        <img class="hidden object-cover w-10 h-10 mx-4 rounded-full sm:block" src="https://images.unsplash.com/photo-1502980426475-b83966705988?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=40&q=80" alt="avatar">
+        <a class="font-bold text-gray-700 cursor-pointer dark:text-gray-200">Daichi-Appy</a>
+        <a class="text-gray-800 cursor-pointer dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-300">
+          <svg class="w-5 h-5 fill-current" xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'>
+              <path d='M496,109.5a201.8,201.8,0,0,1-56.55,15.3,97.51,97.51,0,0,0,43.33-53.6,197.74,197.74,0,0,1-62.56,23.5A99.14,99.14,0,0,0,348.31,64c-54.42,0-98.46,43.4-98.46,96.9a93.21,93.21,0,0,0,2.54,22.1,280.7,280.7,0,0,1-203-101.3A95.69,95.69,0,0,0,36,130.4C36,164,53.53,193.7,80,211.1A97.5,97.5,0,0,1,35.22,199v1.2c0,47,34,86.1,79,95a100.76,100.76,0,0,1-25.94,3.4,94.38,94.38,0,0,1-18.51-1.8c12.51,38.5,48.92,66.5,92.05,67.3A199.59,199.59,0,0,1,39.5,405.6,203,203,0,0,1,16,404.2,278.68,278.68,0,0,0,166.74,448c181.36,0,280.44-147.7,280.44-275.8,0-4.2-.11-8.4-.31-12.5A198.48,198.48,0,0,0,496,109.5Z'/>
+          </svg>
+        </a>
+      </div>
+      <div class="mx-2 border-b ">
+        <p class="mt-2 text-gray-600 dark:text-gray-300">たった256文字のJavaScriptコードで描かれた街の風景アニメがスゴ過ぎて訳がわからない</p>
+      </div>
+
+
+      <div class="flex items-center justify-between mt-3">
+        <span class="text-sm font-light text-gray-600">June 1, 2022</span>
+        <a class="px-3 py-1 text-sm font-bold text-gray-100 transition-colors duration-100 transform bg-gray-600 rounded cursor-pointer hover:bg-gray-500">Design</a>
+      </div>
+      <div class="flex items-center justify-center mt-4">
+        
+      </div>
     </div>
   </body>
 </html>
